# night-bridge

./: .env  .gitignore  Cargo.toml  README.md  build_local.sh  index.html  package.json
bridge/: Cargo.toml
bridge/src/: external.rs  lib.rs
bridge/tests/: test_validate_transfer.rs
contract/bridge/: Cargo.toml  deploy.sh
contract/bridge/src/: external.rs  lib.rs
contract/fungible_token/: Cargo.toml  deploy.sh
contract/fungible_token/src/: lib.rs
contract/lite_client/: Cargo.toml  deploy.sh
contract/lite_client/src/: bloom.rs  lib.rs  utils.rs
contract/lite_node/: Cargo.toml
contract/lite_node/src/: bloom.rs  utils.rs
ft/: Cargo.toml
ft/src/: lib.rs
ft_erc20/: Cargo.toml
ft_erc20/src/: lib.rs
lite_node/: Cargo.toml
lite_node/src/: bloom.rs  lib.rs
lite_node/tests/: test_insert_filter.rs
public/: index.html
scripts/: build_local.sh  deploy_dev.sh
src/: App.css  App.jsx  App.module.css  config.js  index.css  index.js
src/scripts/: nearWallet.js
