[package]
name = "bridge"
version = "1.0.0"
authors = ["NutiNaguti <derzhavin.danila@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
hex-literal = "0.3.4"

[dev-dependencies]
ft = { path = "../ft/" }
lite-node = { path = "../lite_node/" }
