[package]
name = "ft_erc20"
version = "1.0.0"
authors = ["NutiNaguti <derzhavin.danila@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde-big-array = "0.4.1"
serde = "1.0.147"
erc20 = { git = "https://github.com/NutiNaguti/erc20-near" }

[dev-dependencies]
anyhow = "1.0"
base64 = "0.13"
near-units = "0.2.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.7.0"
