[package]
name = "lite-client"
version = "1.0.0"
authors = ["NutiNaguti <derzhavin.danila@icloud.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde-big-array = "0.4.1"
serde = "1.0.147"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
